--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -4,7 +4,7 @@ body {
 }
 
 body {
-	margin: 0px;
+	margin: 0px 0px 50px 0px;
 	padding: 0px;
 	font-family: 'Source Sans Pro', Arial, sans-serif;
 }
