de-summerize the summer scheme
Co-authored-by: Thomas Krampl <thomas.siegfried.krampl@nav.no>
Co-authored-by: Roger Bjørnstad <roger.bjornstad@nav.no>

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -14,8 +14,8 @@
 }
 
 .summer {
-	--active-color: #fffde4;
-	--active-color-strong: #fbf390;
+	--active-color: #e9c9f225;
+	--active-color-strong: #e9c9f290;
 }
 
 .autumn {
