new landing page design

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -1,5 +1,5 @@
 :root {
-	--brand-color: #ff3377;
+	--brand-color: #ff4d89;
 
 	--active-color: var(--a-deepblue-50);
 	--active-color-strong: var(--a-deepblue-100);
