--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -23,7 +23,7 @@ html {
 }
 
 .aksel-heading--medium .heading-aligned-icon {
-	height: var(--ax-font-line-height-heading-medium, --a-font-line-height-heading-medium);
+	height: var(--ax-font-line-height-heading-medium);
 	vertical-align: bottom;
 }
 
