--- a/src/styles/aksel-highlight.css
+++ b/src/styles/aksel-highlight.css
@@ -17,7 +17,7 @@ code.hljs {
 	Current colors taken from GitHub's CSS
   */
 .hljs {
-	color: var(--ax-text-default);
+	color: var(--ax-text-neutral);
 	background: var(--ax-bg-default);
 }
 .hljs-doctag,
