--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -3,18 +3,8 @@
 @import 'tailwindcss/theme.css' layer(theme);
 @import 'tailwindcss/utilities.css' layer(utilities);
 @import '@nais/ds-svelte-community/css/darkside' layer(components);
-@import '@layerstack/tailwind/core.css';
-@import '@layerstack/tailwind/utils.css';
-
-@source '../../node_modules/layerchart/**/*.{svelte,js}';
-
-@theme inline {
-	--color-primary: var(--ax-border-accent);
-	--color-surface-100: var(--ax-bg-default);
-	--color-surface-200: #00ff00;
-	--color-surface-300: var(--ax-bg-raised);
-	--color-surface-content: var(--ax-text-neutral);
-}
+@source '../node_modules/layerchart/dist';
+@import './layerchart.css' layer(components);
 
 :root {
 	--spacing-layout: var(--ax-space-40);
@@ -57,23 +47,4 @@ html {
 		padding: 0;
 		height: 100%;
 	}
-}
-
-.lc-legend-swatch-button {
-	background: none;
-	border: 0;
-	cursor: pointer;
-}
-
-.lc-text {
-	font-family: sans-serif;
-	font-size: 12px;
-}
-
-/* svg {
-	display: unset;
-} */
-
-.lc-spline-path {
-	shape-rendering: geometricPrecision !important;
 }
